--- a/VideoPage.html
+++ b/VideoPage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
-  <header class="text-gray-600 body-font">
+  <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
@@ -18,20 +18,22 @@
         <span class="ml-3 text-xl"><a href="">Spipixel</a></span>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
-        <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
-        <a href="Contact.html" class="mr-5 hover:text-gray-900">Contact</a>
-        <a href="Shop.html" class="mr-5 hover:text-gray-900">Shop</a>
-        <a href="About.html" class="mr-5 hover:text-gray-900">About</a>
+        <div class="buton">
+        <button class="button button1"><a href="index.html">Home</a></button>
+        <button class="button button2"><a href="Blog.html">Blog</a></button>
+        <button class="button button3"><a href="Contact.css"><a href="Contact.html" class="mr-5">Contact</a></a></button>
+        <button class="button button4"><a href="Shop.html"><a href="Shop.html" class="mr-5">Shop</a></a></button>
+        <button class="button button5"><a href="About.html"><a href="About.html" class="mr-5">About</a></a></button>
+      </div>
       </nav>
-      <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
+      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"><a href="SignIn.html">Sign in</a>
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
           <path d="M5 12h14M12 5l7 7-7 7"></path>
         </svg>
       </button>
     </div>
   </header>
-  <section class="text-gray-600 body-font">
+<section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-4">
             <div class="p-4 md:w-1/3">
