--- a/Blog.html
+++ b/Blog.html
@@ -43,6 +43,13 @@ in weekend.
 </b>
 </i>
 </pre>
+
+<pre>
+  <b><h2 class="sm:text-3xl text-2xl text-6xl font-medium title-font mb-4 text-gray-900">INFORMATION</h2></b>
+  <p>To contact our team you can mail in this Gmail
+<p class="text-blue-600" >techdevloper02@gmail.com</p> 
+  </p>
+</pre>
 <hr>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
