--- a/Contact.html
+++ b/Contact.html
@@ -18,12 +18,11 @@
         </h3>
         <label for="email">Email</label>
         <input type="email" placeholder="Enter email" id="email" name="Email" required>
-        <h2>
+<div class="mess">
         <label class="message" for="message">Message</label>
         <input type="text" placeholder="Enter message" id="message" name="Message" required>
-        </h2>
+</div>
         <button>Sumbit Message</button>
-        <h4>To contact Spipixel team you can follow this gmail<a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqZhffTHRTtMkqCMctJBbHSNVWGxMtZPKQCrzmtJCQznfWMsBxvFkvxMPcHDZfFKSJNTLq"> techdevloper02@gmail.com</a> </h4>
         <h5>To Back<a href="index.html"> In Home Page</a></h5>
     </form>
     <script>
