--- a/index.html
+++ b/index.html
@@ -1,352 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="./MoviesFolder/style.css">
-    <link rel="icon" type="image/x-icon" href="./ico/name.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="stl.css">
-    <link rel="stylesheet" type="text/css" href="Background.css">
-    <link rel="stylesheet" href="./CSS/loader.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>404</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,900" rel="stylesheet">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
 
 </head>
-<style>
 
-  .icon-bar {
-    position: fixed;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-  
-  .icon-bar a {
-    display: block;
-    text-align: center;
-    padding: 16px;
-    transition: all 0.3s ease;
-    color: white;
-    font-size: 20px;
-  }
-  
-  .icon-bar a:hover {
-    background-color: #000;
-  }
-  
-  .facebook {
-    background: #3B5998;
-    color: white;
-  }
-  
-  .twitter {
-    background: #55ACEE;
-    color: white;
-  }
-  
-  .google {
-    background: #dd4b39;
-    color: white;
-  }
-  
-  .linkedin {
-    background: #007bb5;
-    color: white;
-  }
-  
-  .youtube {
-    background: #bb0000;
-    color: white;
-  }
-  
-  .content {
-    margin-left: 75px;
-    font-size: 30px;
-  }
+<body>
 
-  .view:hover {
-    background-color: #224f64;
-  }
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>404</h1>
+			</div>
+			<h2>We are sorry, Page not found!</h2>
+			<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
+			<a href="#">Back To Homepage</a>
+		</div>
+	</div>
 
-  .callout{
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) ;
-  }
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
-  body, html {
-  height: 100%;
-  margin: 0;
-}
-
-  .bgimg {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin: 40px;
-  background-image: url('./Images/pexels-miguel-á-padriñán-255379.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
-}
-
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
-
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-
-
-  </style>
-
-<body onload="myFunction()" style="overflow-x: hidden; margin:0;">
-
-  <header  style="margin: 0;" class="prevent-select text-black-600 body-font disp">
-    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-      <div>
-        <img src="./Images/logo.png" alt="">
-      </div>
-      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
-        <div class="navbar flex-div">
-          <img src="./Images/home.png" alt="">
-            <a  class="mr-5 hover:bg-indigo-600 " style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="https://spipxiel.tk">Home</a>
-          <img src="./Images/shop.png" alt="">
-            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
-          <img src="./Images/Blog.png" alt="">
-            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Blog.html">Blog</a>
-          <img src="./Images/about.png" alt="">
-            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="About.html">About</a>
-        </div>
-        <div class="navbar flex-div">
-            <div class="dropdown ">
-              <button style="transition: 0.2s;" class="dropbtn"> <img src="./Images/show-more.png" alt=""> More
-              </button>
-              <div class="dropdown-content">
-                <a href="ProductError.html">Video</a>
-                <a href="./pages/Products.html">Products</a>
-                <a href="ProductError.html">Books</a>
-              </div>
-            </div> 
-          </div>
-        
-        
-
-      </nav>
-    </div>
-  </header>
-
-<div id="loader"></div>
-
-
-<div style="display:none;" id="myDiv" class="animate-bottom">
-  
-
-  <section class="text-gray-600 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" class="prevent-select object-cover object-center rounded" src="./Images/Youtube.jpg" alt="Youtube" >
-      </div>
-      <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Youtube Contents
-          <br class="hidden lg:inline-block">tutorial video on this channel
-        </h1>
-        <p class="mb-8 leading-relaxed">I hope this video tutorial is helpful for you , i cover C , Python or HTML Content I will try to cover more contents in future</p>
-        <div class="flex justify-center">
-          <div class="tooltip">
-            <button style="transition: 0.2s;" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="VideoPage.html">View pages</a></button>
-            <span class="tooltiptext"> You can Watch Videos form this website </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-<form>
-<section class="text-gray-600 body-font overflow-hidden">
-    <div class="container px-5 py-24 mx-auto">
-      <div class="-my-8 divide-y-2 divide-gray-100">
-          <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px; margin-top: 20px;" class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-              <span class="font-semibold title-font text-gray-700">Science</span>
-              <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
-            </div>
-            <div class="md:flex-grow">
-              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
-              <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
-              <a class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="Esdesae123" onclick="science()">Download</p>
-                <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-        <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px;" class="py-8 flex flex-wrap md:flex-nowrap">
-          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-            <span class="font-semibold title-font text-gray-700">Maths</span>
-            <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
-          </div>
-          <div class="md:flex-grow">
-            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Maths Free Download From Here</h2>
-            <p class="leading-relaxed">This Page you can find all Chapters of Maths notes</p>
-            <a class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="3rx1w3d" onclick="math()">Download</p>
-              <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M5 12h14"></path>
-                <path d="M12 5l7 7-7 7"></path>
-              </svg>
-            </a>
-          </div>
-        </div>
-        <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px; margin-block-end: 30px;" class="py-8 flex flex-wrap md:flex-nowrap">
-          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-            <span class="font-semibold title-font text-gray-700">Social Sciencs</span>
-            <span class="text-sm text-gray-500">10/5/2022</span>
-          </div>
-          <div class="md:flex-grow">
-            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Social Science Free Download From Here</h2>
-            <p class="leading-relaxed">This Page you can find all Chapters of Social Science notes</p>
-            <a href="spipixel.tk" target="blank" class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="vfs23ess" onclick="sscience()">Download</p>
-              <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M5 12h14"></path>
-                <path d="M12 5l7 7-7 7"></path>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</form>
-
-<div class="prevent-select callout">
-  <div class="callout-header">Spipixel</div>
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  <div class="callout-container">
-    <p>Cirtificates of my Achievement from free online course  <button onclick="document.location.href='./Cirtificates/python.html'" style="background: black; border-radius: 7px; padding: 5px; width: 100px; margin-left: 10px;" class="w3-button w3-round-large"><a href="./Cirtificates/python.html">View</a></button> </p>
-  </div>
-</div>
-
-
-<hr style="padding: 0; margin-top: 10px; background: none; margin: 10px; background-color: none;">
-
-  <footer class="prevent-select text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
-      <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-        <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
-            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-          </svg>
-          <span class="ml-3 text-xl"><a href="index.html">Spipixel</a></span>
-        </a>
-        <p class="mt-2 text-sm text-gray-500"><a href="About.html">About</a></p>
-      </div>
-      <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Social Media</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="text-gray-600 hover:text-gray-800">Youtube</a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
-            </li>
-            <li>
-              <a href="Error Page.html" class="text-gray-600 hover:text-gray-800">Facebook</a>
-            </li>
-            <li>
-              <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
-            </li>
-          </nav>
-        </div>
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a href="index.html" class="text-gray-600 hover:text-gray-800">Home</a>
-            </li>
-            <li>
-              <a href="Contact.css" class="text-gray-600 hover:text-gray-800">Contact</a>
-            </li>
-            <li>
-              <a href="Shop.html" class="text-gray-600 hover:text-gray-800">Shop</a>
-            </li>
-            <li>
-              <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
-            </li>
-          </nav>
-        </div>
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Team</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
-            </li>
-            <li>
-              <a href="" class="text-gray-600 hover:text-gray-800">Hyper8107</a>
-            </li>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="bg-gray-100">
-      <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-        <p class="text-gray-500 text-sm text-center sm:text-left">© 2022-23 Spipixel —
-          <a onclick="document.location='Error Page.html'" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@Spipixel</a>
-        </p>
-        <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-          <a onclick="document.location='Error Page.html'" class="text-gray-500">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
-              <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-            </svg>
-          </a>
-          <a href="https://twitter.com/AyushTr82343206" class="ml-3 text-gray-500">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
-              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-            </svg>
-          </a>
-          <a href="https://www.instagram.com/spipixel12/" class="ml-3 text-gray-500">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
-              <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-              <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-            </svg>
-          </a>
-        </span>
-      </div>
-    </div>
-  </footer>
-</div>
-
-
-<script src="./Component/js/event.js"></script>
-<script src="./JS/Loader.js"></script>
-<script src="./JS/notification.js"></script>
-
-
-
-
-</body>
 </html>
