--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<h1>404</h1>
 			</div>
 			<h2>We are sorry, Page not found!</h2>
-			<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-			<a href="#">Back To Homepage</a>
+			<p>Domain name is changed to go new website click below Homepage button </p>
+			<a href="https://spipixel.ml">Back To Homepage</a>
 		</div>
 	</div>
 
